# minidisc_buildroot

./: Config.in  README.md  external.desc  external.mk
board/minidisc/: genimage.cfg  linux.defconfig  uboot.fragment
board/minidisc/devicetree/: devicetree.dts  suniv-f1c100s.dtsi
board/minidisc/overlay/etc/init.d/: S41alsa
board/minidisc/overlay/root/: .screenrc  ppp
board/minidisc/overlay/var/lib/alsa/: asound.state
configs/: minidisc_defconfig
package/minidisc/: Config.in  S42minidisc  minidisc.mk
package/minidisc/src/: Buttons.cpp  Buttons.h  CMakeLists.txt  Cd.cpp  Cd.h  Mpg123.cpp  Mpg123.h  SSD1306.h  minidisc.cpp
